[gd_scene load_steps=25 format=3 uid="uid://b5ebjd0n88cuc"]

[ext_resource type="Texture2D" uid="uid://0xmevndwskbg" path="res://art/locations/apartment-inside-16.png" id="1"]
[ext_resource type="Script" path="res://scripts/Apartment-Int.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://brwjwwoh74p1y" path="res://art/object/lightswitch.png" id="3"]
[ext_resource type="FontFile" path="res://fonts/MainFont.tres" id="4"]
[ext_resource type="StyleBox" path="res://styles/MainText.tres" id="5"]
[ext_resource type="Script" path="res://scripts/Input.gd" id="6"]
[ext_resource type="Texture2D" uid="uid://d4jskmrgigeoe" path="res://art/object/dummy-inv.png" id="7"]
[ext_resource type="Texture2D" uid="uid://bnvxgvuqb7mpt" path="res://art/object/ramen.png" id="8"]
[ext_resource type="Texture2D" uid="uid://ce47wer08w1wi" path="res://art/object/Note.png" id="9"]
[ext_resource type="Shader" uid="uid://cpufdiocgwhyy" path="res://art/shaders/fade.tres" id="10"]
[ext_resource type="Texture2D" uid="uid://cr68t345dquwi" path="res://art/object/microwave.png" id="11"]
[ext_resource type="FontFile" path="res://fonts/MainFontBold.tres" id="12"]
[ext_resource type="FontFile" path="res://fonts/MainFontBoldItalic.tres" id="13"]
[ext_resource type="FontFile" path="res://fonts/MainFontItalic.tres" id="14"]
[ext_resource type="Texture2D" uid="uid://b7i3qk8rfjd6x" path="res://art/object/microwave-flames.png" id="15"]
[ext_resource type="Texture2D" uid="uid://dl2qj2nc7kr0x" path="res://art/misc/baby-pic.png" id="16"]
[ext_resource type="Texture2D" uid="uid://dwmgddyu22qxi" path="res://art/misc/laptop.png" id="17"]

[sub_resource type="ShaderMaterial" id="2"]
shader = ExtResource("10")
shader_parameter/desaturation_strength = 1.0
shader_parameter/darkness = 0.25

[sub_resource type="ShaderMaterial" id="3"]
shader = ExtResource("10")
shader_parameter/desaturation_strength = 1.0
shader_parameter/darkness = 0.25

[sub_resource type="ShaderMaterial" id="6"]
shader = ExtResource("10")
shader_parameter/desaturation_strength = 1.0
shader_parameter/darkness = 0.25

[sub_resource type="ShaderMaterial" id="4"]
shader = ExtResource("10")
shader_parameter/desaturation_strength = 1.0
shader_parameter/darkness = 0.25

[sub_resource type="ShaderMaterial" id="5"]
shader = ExtResource("10")
shader_parameter/desaturation_strength = 1.0
shader_parameter/darkness = 0.25

[sub_resource type="ShaderMaterial" id="7"]
shader = ExtResource("10")
shader_parameter/desaturation_strength = 1.0
shader_parameter/darkness = 0.25

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0, 0, 0, 1)

[node name="Apartment-Int" type="Node2D"]
script = ExtResource("2")

[node name="MainWindow" type="Node2D" parent="."]

[node name="Backdrop" type="ColorRect" parent="MainWindow"]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="LocationImage" type="TextureRect" parent="MainWindow"]
clip_children = 2
material = SubResource("2")
offset_top = 40.0
offset_right = 1280.0
offset_bottom = 680.0
mouse_filter = 0
texture = ExtResource("1")
stretch_mode = 6

[node name="Interactives" type="Node2D" parent="MainWindow/LocationImage"]

[node name="LightSwitch" type="TextureRect" parent="MainWindow/LocationImage/Interactives"]
material = SubResource("3")
offset_left = 224.0
offset_top = 291.0
offset_right = 248.0
offset_bottom = 325.0
texture = ExtResource("3")

[node name="ExitField" type="Container" parent="MainWindow/LocationImage/Interactives"]
offset_left = 833.0
offset_top = 120.0
offset_right = 959.0
offset_bottom = 248.0

[node name="ExitField" type="Container" parent="MainWindow/LocationImage/Interactives/ExitField"]
layout_mode = 2

[node name="Ramen" type="TextureRect" parent="MainWindow/LocationImage/Interactives"]
material = SubResource("6")
offset_left = 940.0
offset_top = 288.0
offset_right = 991.0
offset_bottom = 324.0
texture = ExtResource("8")

[node name="Note" type="TextureRect" parent="MainWindow/LocationImage/Interactives"]
material = SubResource("4")
offset_left = 535.0
offset_top = 162.0
offset_right = 599.0
offset_bottom = 211.0
texture = ExtResource("9")

[node name="Microwave" type="TextureRect" parent="MainWindow/LocationImage/Interactives"]
material = SubResource("5")
offset_left = 1035.0
offset_top = 161.0
offset_right = 1173.0
offset_bottom = 253.0
texture = ExtResource("11")

[node name="Bed" type="Container" parent="MainWindow/LocationImage/Interactives"]
offset_left = 265.0
offset_top = 357.0
offset_right = 458.0
offset_bottom = 465.0

[node name="Desk" type="Container" parent="MainWindow/LocationImage/Interactives"]
offset_left = 543.0
offset_top = 295.0
offset_right = 720.0
offset_bottom = 410.0

[node name="Sink" type="Container" parent="MainWindow/LocationImage/Interactives"]
offset_left = 1065.0
offset_top = 273.0
offset_right = 1176.0
offset_bottom = 341.0

[node name="Cabinets" type="Container" parent="MainWindow/LocationImage/Interactives"]
offset_left = 901.0
offset_top = 369.0
offset_right = 1218.0
offset_bottom = 482.0

[node name="MicrowaveFlame" type="TextureRect" parent="MainWindow/LocationImage/Interactives"]
visible = false
material = SubResource("7")
offset_left = 989.0
offset_top = 65.0
offset_right = 1175.0
offset_bottom = 254.0
texture = ExtResource("15")

[node name="Nightstand" type="Container" parent="MainWindow/LocationImage/Interactives"]
offset_left = 480.0
offset_top = 346.0
offset_right = 532.0
offset_bottom = 384.0

[node name="Laptop" type="TextureRect" parent="MainWindow/LocationImage/Interactives"]
visible = false
offset_left = 567.0
offset_top = 274.0
offset_right = 690.0
offset_bottom = 334.0
texture = ExtResource("17")

[node name="BabyPic" type="TextureRect" parent="MainWindow/LocationImage/Interactives"]
visible = false
offset_left = 396.0
offset_top = 149.0
offset_right = 884.0
offset_bottom = 487.0
texture = ExtResource("16")

[node name="BathExit" type="Container" parent="MainWindow/LocationImage/Interactives"]
offset_left = 1221.0
offset_top = 392.0
offset_right = 1278.0
offset_bottom = 635.0

[node name="AptWall" type="Container" parent="MainWindow/LocationImage/Interactives"]
offset_left = 83.0
offset_top = 344.0
offset_right = 230.0
offset_bottom = 443.0

[node name="Decor" type="Container" parent="MainWindow/LocationImage/Interactives"]
offset_left = 117.0
offset_top = 187.0
offset_right = 184.0
offset_bottom = 272.0

[node name="AptFloor" type="Container" parent="MainWindow/LocationImage/Interactives"]
offset_left = 347.0
offset_top = 492.0
offset_right = 919.0
offset_bottom = 625.0

[node name="Misc" type="Container" parent="MainWindow/LocationImage/Interactives"]
offset_left = 438.0
offset_top = 120.0
offset_right = 509.0
offset_bottom = 157.0

[node name="BigBlocker" type="Container" parent="MainWindow/LocationImage/Interactives"]
visible = false
offset_right = 1279.0
offset_bottom = 677.0

[node name="Overlay" type="Node2D" parent="MainWindow"]

[node name="MainText" type="Panel" parent="MainWindow/Overlay"]
visible = false
offset_left = 140.0
offset_top = 400.0
offset_right = 1140.0
offset_bottom = 621.0
theme_override_styles/panel = ExtResource("5")

[node name="Body" type="RichTextLabel" parent="MainWindow/Overlay/MainText"]
layout_mode = 0
offset_left = 15.0
offset_top = 10.0
offset_right = 500.0
offset_bottom = 111.0
scale = Vector2(2, 2)
theme_override_fonts/normal_font = ExtResource("4")
theme_override_fonts/bold_font = ExtResource("12")
theme_override_fonts/italics_font = ExtResource("14")
theme_override_fonts/bold_italics_font = ExtResource("13")
bbcode_enabled = true
scroll_active = false

[node name="ChoiceLabel" type="RichTextLabel" parent="MainWindow/Overlay/MainText"]
visible = false
layout_mode = 0
offset_left = 3.0
offset_top = 5.0
offset_right = 997.0
offset_bottom = 47.0
scale = Vector2(2, 2)
theme_override_fonts/normal_font = ExtResource("4")
bbcode_enabled = true
text = "[You:]"

[node name="Choices" type="Container" parent="MainWindow/Overlay/MainText"]
visible = false
layout_mode = 0
offset_right = 1000.0
offset_bottom = 222.0

[node name="Choice0" type="RichTextLabel" parent="MainWindow/Overlay/MainText/Choices"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("4")
theme_override_fonts/bold_font = ExtResource("12")
bbcode_enabled = true

[node name="Choice1" type="RichTextLabel" parent="MainWindow/Overlay/MainText/Choices"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("4")
theme_override_fonts/bold_font = ExtResource("12")
bbcode_enabled = true

[node name="Choice2" type="RichTextLabel" parent="MainWindow/Overlay/MainText/Choices"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("4")
bbcode_enabled = true

[node name="Choice3" type="RichTextLabel" parent="MainWindow/Overlay/MainText/Choices"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("4")
bbcode_enabled = true

[node name="Choice4" type="RichTextLabel" parent="MainWindow/Overlay/MainText/Choices"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("4")
bbcode_enabled = true

[node name="Command" type="Panel" parent="MainWindow/Overlay"]
visible = false
offset_left = 140.0
offset_top = 470.0
offset_right = 1140.0
offset_bottom = 522.0
theme_override_styles/panel = ExtResource("5")

[node name="TextEdit" type="LineEdit" parent="MainWindow/Overlay/Command"]
clip_contents = true
layout_mode = 0
offset_left = 15.0
offset_top = 5.0
offset_right = 505.0
offset_bottom = 24.0
scale = Vector2(2, 2)
theme_override_fonts/font = ExtResource("4")
theme_override_styles/normal = SubResource("1")
max_length = 47
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
caret_blink = true
script = ExtResource("6")

[node name="ItemText" type="Panel" parent="MainWindow/Overlay"]
visible = false
offset_left = 340.0
offset_top = 177.0
offset_right = 940.0
offset_bottom = 524.0
theme_override_styles/panel = ExtResource("5")

[node name="ItemImage" type="TextureRect" parent="MainWindow/Overlay/ItemText"]
layout_mode = 0
offset_left = 200.0
offset_top = 36.0
offset_right = 400.0
offset_bottom = 216.0
texture = ExtResource("7")
stretch_mode = 6

[node name="ItemBody" type="RichTextLabel" parent="MainWindow/Overlay/ItemText"]
layout_mode = 0
offset_left = 14.0
offset_top = 257.0
offset_right = 298.0
offset_bottom = 297.0
scale = Vector2(2, 2)
theme_override_fonts/normal_font = ExtResource("4")
text = "You got an item.aaaaaaaaaaaa
Great for certain stuff."
scroll_active = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayerAlarm" type="AudioStreamPlayer" parent="."]

[connection signal="gui_input" from="MainWindow/LocationImage/Interactives/LightSwitch" to="." method="_on_LightSwitch_gui_input"]
[connection signal="mouse_entered" from="MainWindow/LocationImage/Interactives/LightSwitch" to="." method="_on_LightSwitch_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/LocationImage/Interactives/LightSwitch" to="." method="_on_LightSwitch_mouse_exited"]
[connection signal="gui_input" from="MainWindow/LocationImage/Interactives/ExitField" to="." method="_on_ExitField_gui_input"]
[connection signal="mouse_entered" from="MainWindow/LocationImage/Interactives/ExitField" to="." method="_on_ExitField_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/LocationImage/Interactives/ExitField" to="." method="_on_ExitField_mouse_exited"]
[connection signal="tree_exited" from="MainWindow/LocationImage/Interactives/ExitField" to="." method="_on_ExitField_tree_exited"]
[connection signal="gui_input" from="MainWindow/LocationImage/Interactives/ExitField/ExitField" to="." method="_on_ExitField_gui_input"]
[connection signal="mouse_entered" from="MainWindow/LocationImage/Interactives/ExitField/ExitField" to="." method="_on_ExitField_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/LocationImage/Interactives/ExitField/ExitField" to="." method="_on_ExitField_mouse_exited"]
[connection signal="tree_exited" from="MainWindow/LocationImage/Interactives/ExitField/ExitField" to="." method="_on_ExitField_tree_exited"]
[connection signal="gui_input" from="MainWindow/LocationImage/Interactives/Ramen" to="." method="_on_Ramen_gui_input"]
[connection signal="gui_input" from="MainWindow/LocationImage/Interactives/Note" to="." method="_on_Note_gui_input"]
[connection signal="gui_input" from="MainWindow/LocationImage/Interactives/Microwave" to="." method="_on_Microwave_gui_input"]
[connection signal="mouse_entered" from="MainWindow/LocationImage/Interactives/Microwave" to="." method="_on_Microwave_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/LocationImage/Interactives/Microwave" to="." method="_on_Microwave_mouse_exited"]
[connection signal="gui_input" from="MainWindow/LocationImage/Interactives/Bed" to="." method="_on_Bed_gui_input"]
[connection signal="gui_input" from="MainWindow/LocationImage/Interactives/Desk" to="." method="_on_Desk_gui_input"]
[connection signal="mouse_entered" from="MainWindow/LocationImage/Interactives/Desk" to="." method="_on_Desk_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/LocationImage/Interactives/Desk" to="." method="_on_Desk_mouse_exited"]
[connection signal="gui_input" from="MainWindow/LocationImage/Interactives/Sink" to="." method="_on_Sink_gui_input"]
[connection signal="mouse_entered" from="MainWindow/LocationImage/Interactives/Sink" to="." method="_on_Sink_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/LocationImage/Interactives/Sink" to="." method="_on_Sink_mouse_exited"]
[connection signal="gui_input" from="MainWindow/LocationImage/Interactives/Cabinets" to="." method="_on_Cabinets_gui_input"]
[connection signal="gui_input" from="MainWindow/LocationImage/Interactives/Nightstand" to="." method="_on_Nightstand_gui_input"]
[connection signal="gui_input" from="MainWindow/LocationImage/Interactives/Laptop" to="." method="_on_Laptop_gui_input"]
[connection signal="gui_input" from="MainWindow/LocationImage/Interactives/BathExit" to="." method="_on_BathExit_gui_input"]
[connection signal="mouse_entered" from="MainWindow/LocationImage/Interactives/BathExit" to="." method="_on_ExitField_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/LocationImage/Interactives/BathExit" to="." method="_on_ExitField_mouse_exited"]
[connection signal="gui_input" from="MainWindow/LocationImage/Interactives/AptWall" to="." method="_on_AptWall_gui_input"]
[connection signal="gui_input" from="MainWindow/LocationImage/Interactives/Decor" to="." method="_on_Decor_gui_input"]
[connection signal="gui_input" from="MainWindow/LocationImage/Interactives/AptFloor" to="." method="_on_AptFloor_gui_input"]
[connection signal="gui_input" from="MainWindow/LocationImage/Interactives/Misc" to="." method="_on_Misc_gui_input"]
[connection signal="gui_input" from="MainWindow/Overlay/MainText/Choices/Choice0" to="." method="_on_Choice0_gui_input"]
[connection signal="mouse_entered" from="MainWindow/Overlay/MainText/Choices/Choice0" to="." method="_on_Choice0_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/Overlay/MainText/Choices/Choice0" to="." method="_on_Choice0_mouse_exited"]
[connection signal="gui_input" from="MainWindow/Overlay/MainText/Choices/Choice1" to="." method="_on_Choice1_gui_input"]
[connection signal="mouse_entered" from="MainWindow/Overlay/MainText/Choices/Choice1" to="." method="_on_Choice1_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/Overlay/MainText/Choices/Choice1" to="." method="_on_Choice1_mouse_exited"]
[connection signal="gui_input" from="MainWindow/Overlay/MainText/Choices/Choice2" to="." method="_on_Choice2_gui_input"]
[connection signal="mouse_entered" from="MainWindow/Overlay/MainText/Choices/Choice2" to="." method="_on_Choice2_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/Overlay/MainText/Choices/Choice2" to="." method="_on_Choice2_mouse_exited"]
[connection signal="gui_input" from="MainWindow/Overlay/MainText/Choices/Choice3" to="." method="_on_Choice3_gui_input"]
[connection signal="mouse_entered" from="MainWindow/Overlay/MainText/Choices/Choice3" to="." method="_on_Choice3_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/Overlay/MainText/Choices/Choice3" to="." method="_on_Choice3_mouse_exited"]
[connection signal="gui_input" from="MainWindow/Overlay/MainText/Choices/Choice4" to="." method="_on_Choice4_gui_input"]
[connection signal="mouse_entered" from="MainWindow/Overlay/MainText/Choices/Choice4" to="." method="_on_Choice4_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/Overlay/MainText/Choices/Choice4" to="." method="_on_Choice4_mouse_exited"]
[connection signal="gui_input" from="MainWindow/Overlay/Command/TextEdit" to="MainWindow/Overlay/Command/TextEdit" method="_on_TextEdit_gui_input"]
